# rustdemo

./: .env  Cargo.toml
src/: main.rs
src/background/: task.rs
src/case/: case.rs  mod.rs
src/db/: db.rs
src/error/: error.rs
src/lib/: http.rs  middleware.rs  mod.rs
src/model/: post.rs
src/router/: hello.rs
src/services/: hello.rs
