[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
mysql = "23.0.0"
# SeaORM
sqlx = "0.6.2"
sea-orm = { version = "0.10.6", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = "1.0.217"
thiserror = "2.0.9"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
text-colorizer = "1.0.0"
futures-util = "0.3.31"
